# raven

./: .gitignore  Dockerfile  README.md  meson.build
src/: .gitignore  Makefile  defs.h  main.c  raven.c  raven.h
src/core/: any.c  any.h  base_obj.c  base_obj.h  blueprint.c  blueprint.h  object_table.c  object_table.h  type.c  type.h  vars.c  vars.h
src/core/objects/: array.c  array.h  base_obj.c  base_obj.h  connection.c  connection.h  funcref.c  funcref.h  function.c  function.h  mapping.c  mapping.h  object.c  object.h  string.c  string.h  symbol.c  symbol.h
src/extras/git/: git.c  git.h
src/fs/: file.c  file.h  filesystem.c  filesystem.h
src/gc/: gc.c  gc.h  stats.c  stats.h
src/lang/: bytecodes.h  codewriter.c  codewriter.h  compiler.c  compiler.h  modifiers.h  parsepiler.c  parsepiler.h  parser.c  parser.h  reader.c  reader.h  script.c  script.h
src/platform/abstraction/: socket.c  socket.h
src/platform/fs/: file.c  file.h  file_info.c  file_info.h  filesystem.c  filesystem.h  fs.c  fs.h  fs_pather.c  fs_pather.h
src/platform/server/: server.c  server.h
src/raven/: channel.c  channel.h  raven.c  raven.h  raven_builtins.c
src/raven/persistence/: persistence.c  persistence.h
src/raven/persistence/serializer/: serializer.c  serializer.h
src/runtime/core/: any.c  any.h  base_obj.c  base_obj.h  blueprint.c  blueprint.h  object_table.c  object_table.h  type.c  type.h  vars.c  vars.h
src/runtime/core/objects/: array.c  array.h  connection.c  connection.h  funcref.c  funcref.h  function.c  function.h  mapping.c  (+7 more)
src/runtime/gc/: gc.c  gc.h  stats.h
src/runtime/lang/: bytecodes.h  codewriter.c  codewriter.h  compiler.c  compiler.h  modifiers.h  parsepiler.c  parser.c  parser.h  reader.c  reader.h  script.c  script.h
src/runtime/serializer/: serializer.c  serializer.h
src/runtime/vm/: builtins.c  builtins.h  fiber.c  fiber.h  frame.h  interpreter.c  interpreter.h  op.c  op.h  scheduler.c  scheduler.h
src/serializer/: serializer.c  serializer.h
src/server/: server.c  server.h
src/util/: bytebuffer.c  bytebuffer.h  charpp.c  charpp.h  forker.c  forker.h  log.c  log.h  memory.c  memory.h  ringbuffer.c  ringbuffer.h  stringbuilder.c  stringbuilder.h  time.c  time.h  utf8.c  utf8.h  vt100.h  wrap.c  wrap.h
src/vm/: builtins.c  builtins.h  fiber.c  fiber.h  frame.c  frame.h  interpreter.c  interpreter.h  op.c  op.h  scheduler.c  scheduler.h
(+12 files in other folders)
